--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="" />
             <div class="cart--item--nome">--</div>
             <div class="cart--item--qtarea">
-                <button class="cart--item-qtmenos">-</button>
+                <button class="cart--item--qtmenos">-</button>
                 <div class="cart--item--qt">1</div>
                 <button class="cart--item--qtmais">+</button>
             </div>
